<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SearchFragment">

    <TextView android:text="@string/image_search" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/welcome"/>

    <EditText
        android:id="@+id/inputsearch"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_below="@id/welcome"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/inputsearch"
        android:layout_toEndOf="@id/inputsearch"
        android:text="@string/searchbuttontext"
        android:layout_below="@id/welcome"
        android:id="@+id/search_button"/>
    
    <WebView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/inputsearch"
        android:id="@+id/viewimage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_all_text"
        android:layout_alignParentBottom="true"
        android:id="@+id/view_all_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/savebutton"
        android:layout_above="@id/view_all_button"
        android:id="@+id/save_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/next_button"
        android:layout_below="@id/viewimage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/next_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/previous_button"
        android:layout_below="@id/viewimage"
        android:id="@+id/previous_image"
        android:layout_toLeftOf="@id/next_image"
        android:layout_toStartOf="@id/next_image"/>

</RelativeLayout>
